@@ -1,6 +1,10 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+29-Jan-2002 (Lars Duening)  (3.3.382)
+  - (smalloc.c) In mem_increment_size(), the internal size of the
+       memoryblock was most cases computed one word too small.
+
 28-Jan-2002 (Lars Duening)  (3.3.381)
   - (prolang.y, interpret.c) Improved the error message when a given
        struct doesn't match the expected struct type.
